<resources>
    <string name="app_name">Lab4_1</string>
    <string name="change_text">change text</string>
    <string name="new_text">New text</string>
    <string name="some_text">some text</string>
</resources>